- update tokenscript handling for latest schema.